--- a/animal-trading-cards-master/card.html
+++ b/animal-trading-cards-master/card.html
@@ -3,25 +3,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>Animal Trading Cards</title>
+	<link rel = "stylesheet"
+	type = "text/css"
+	href = "styles.css" />
+
 </head>
 <body>
 	<div>
 		<!-- your favorite animal's name goes here -->
-		<h3>Animal's name</h3>
+		<h3>Octopus</h3>
 		<!-- your favorite animal's image goes here -->
 		<img src="https://cnet2.cbsistatic.com/img/krvlqXhrB6JejPopOWyA2nptAss=/936x527/2017/01/05/a76a07c5-c5e5-48bc-ac0c-0dcb3fd982ff/superfreakyoctopuslandingpage.jpg" alt="octopus">
-		<div>
+		<div class='animal_info'>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p>Write an interesting fact about your favorite animal...</p>
+			<p><em>Sadly, for them, sex is a death sentence</em></p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
-				<li><span>Label</span>: Item #1</li>
-				<li><span>Label</span>: Item #2</li>
-				<li><span>Label</span>: Item #3</li>
-				<li><span>Label</span>: Item #4</li>
+				<li><span>Greek Name</span>: Októpus, which means "eight foot."</li>
+				<li><span>Average Length</span>: 12 to 36 inches (30.5 to 91.4 centimeters) long </li>
+				<li><span>Average Lifespan</span>: Some species only live for around six months. Other species, like the North Pacific giant octopus can live as long as five years.
+					Typically, the larger the octopus, the longer it lives.</li>
+				<li><span>Habitat</span>: Octopuses live in oceans all over the world. Most are pelagic, meaning they
+					live near the water's surface in shells, reefs and crevices</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
-			<p>Write a brief description about your favorite animal...</p>
+			<p>Octopuses are ocean creatures
+				that are most famous for having eight arms and bulbous heads.
+				Some other fun facts: They have three hearts and blue blood; they squirt
+				ink to deter predators; and being boneless, they can squeeze into (or out of)
+				tight spaces. They are quite intelligent and have been observed using tools.</p>
 		</div>
 	</div>
 </body>
